# pybiorythm-django-api-server-example

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.sh  test_api.py
.github/workflows/: ci.yml
api/: serializers.py  urls.py  views.py
biorhythm_api/: asgi.py  settings.py  urls.py  wsgi.py
biorhythm_data/migrations/: 0001_initial.py
